--- a/css/styles.css
+++ b/css/styles.css
@@ -693,6 +693,7 @@ input[type='checkbox'] {
 /*     Customers     */
 /*********************/
 .basic-4 {
+	display:none;
 	padding-top: 1rem;
 	padding-bottom: 6rem;
 	text-align: center;
