--- a/css/styles.css
+++ b/css/styles.css
@@ -143,7 +143,7 @@ a:hover {
 }
 
 .orange {
-	color: #d79491;
+	color: var(--color2);
 }
 
 .bg-gray {
@@ -162,8 +162,8 @@ a:hover {
 .btn-solid-reg {
 	display: inline-block;
 	padding: 1.375rem 2.25rem 1.375rem 2.25rem;
-	border: 1px solid #d79491;
-	background-color: #d79491;
+	border: 1px solid var(--color2);
+	background-color: var(--color2);
 	color: #ffffff;
 	font-weight: 600;
 	font-size: 0.875rem;
@@ -173,17 +173,17 @@ a:hover {
 }
 
 .btn-solid-reg:hover {
-	border: 1px solid #d79491;
+	border: 1px solid var(--color2);
 	background-color: transparent;
-	color: #d79491; /* needs to stay here because of the forced color property of a tag */
+	color: var(--color2); /* needs to stay here because of the forced color property of a tag */
 	text-decoration: none;
 }
 
 .btn-solid-lg {
 	display: inline-block;
 	padding: 1.625rem 2.625rem 1.625rem 2.625rem;
-	border: 1px solid #d79491;
-	background-color: #d79491;
+	border: 1px solid var(--color2);
+	background-color: var(--color2);
 	color: #ffffff;
 	font-weight: 600;
 	font-size: 0.875rem;
@@ -193,9 +193,9 @@ a:hover {
 }
 
 .btn-solid-lg:hover {
-	border: 1px solid #d79491;
+	border: 1px solid var(--color2);
 	background-color: transparent;
-	color: #d79491; /* needs to stay here because of the forced color property of a tag */
+	color: var(--color2); /* needs to stay here because of the forced color property of a tag */
 	text-decoration: none;
 }
 
@@ -364,8 +364,8 @@ input[type='checkbox'] {
 	display: inline-block;
 	width: 100%;
 	height: 3.25rem;
-	border: 1px solid #d79491;
-	background-color: #d79491;
+	border: 1px solid var(--color2);
+	background-color: var(--color2);
 	color: #ffffff;
 	font-weight: 600;
 	font-size: 0.875rem;
@@ -375,9 +375,9 @@ input[type='checkbox'] {
 }
 
 .form-control-submit-button:hover {
-	border: 1px solid #d79491;
+	border: 1px solid var(--color2);
 	background-color: transparent;
-	color: #d79491;
+	color: var(--color2);
 }
 
 /* Fade Animation For Image Lightbox And Morphtext - Magnific Popup  */
@@ -489,7 +489,7 @@ input[type='checkbox'] {
 
 .navbar .nav-item .nav-link:hover,
 .navbar .nav-item .nav-link.active {
-	color: #d79491;
+	color: var(--color2);
 }
 
 .navbar .social-icons a {
@@ -505,7 +505,7 @@ input[type='checkbox'] {
 }
 
 .navbar .fab:hover {
-	color: #d79491;
+	color: var(--color2);
 }
 
 .navbar .navbar-toggler {
@@ -538,7 +538,7 @@ input[type='checkbox'] {
 }
 
 .header #js-rotating {
-	color: #d79491;
+	color: var(--color2);
 }
 
 .header .p-large {
@@ -552,7 +552,7 @@ input[type='checkbox'] {
 }
 
 .header .fas:hover {
-	color: #d79491;
+	color: var(--color2);
 }
 
 .header .area-2 {
@@ -613,7 +613,7 @@ input[type='checkbox'] {
 
 .basic-2 .list-unstyled .fas {
 	margin-top: 0.125rem;
-	color: #d79491;
+	color: var(--color2);
 	font-size: 3.25rem;
 }
 
@@ -641,7 +641,7 @@ input[type='checkbox'] {
 .basic-3 .btn-solid-lg {
 	border-color: #ffffff;
 	background-color: #ffffff;
-	color: #d79491;
+	color: var(--color2);
 }
 
 .basic-3 .btn-solid-lg:hover {
@@ -751,7 +751,7 @@ input[type='checkbox'] {
 }
 
 .form-1 .fa-stack-2x {
-	color: #d79491;
+	color: var(--color2);
 	transition: all 0.2s ease;
 }
 
@@ -798,7 +798,7 @@ a.back-to-top {
 	width: 42px;
 	height: 42px;
 	border-radius: 30px;
-	background: #d79491 url("../images/up-arrow.png") no-repeat center 47%;
+	background: var(--color2) url("../images/up-arrow.png") no-repeat center 47%;
 	background-size: 18px 18px;
 	text-indent: -9999px;
 }
@@ -817,7 +817,7 @@ a:hover.back-to-top {
 }
 
 .ex-basic-1 .list-unstyled .fas {
-	color: #d79491;
+	color: var(--color2);
 	font-size: 0.375rem;
 	line-height: 1.625rem;
 }
@@ -842,7 +842,7 @@ a:hover.back-to-top {
 }
 
 .ex-cards-1 .card .fa-stack-2x {
-	color: #d79491;
+	color: var(--color2);
 }
 
 .ex-cards-1 .card .fa-stack-1x {
